--- a/estilos.css
+++ b/estilos.css
@@ -1,5 +1,5 @@
 body {
-    margin-left: 1050px;
-    margin-top: 250px;
+    margin-top: 300px;
+    text-align: center;
     background-color: aliceblue;
 }
